# confseq

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-macos-dist.yml  build-wheels.yml  check-python-package.yml  cibuildwheels-manylinux.yml  pypi-publish.yml  python-package.yml  quick-check-python-package.yml
demo/: ate_data.csv  ate_demo.py  quantiles.py
r_package/: DESCRIPTION  NAMESPACE
r_package/R/: RcppExports.R  confseq.R
r_package/inst/include/: Package.h  uniform_boundaries.h
r_package/man/: bernoulli_confidence_interval.Rd  beta_binomial_log_mixture.Rd  beta_binomial_mixture_bound.Rd  confseq-package.Rd  double_stitching_bound.Rd  empirical_process_lil_bound.Rd  gamma_exponential_log_mixture.Rd  gamma_exponential_mixture_bound.Rd  gamma_poisson_log_mixture.Rd  gamma_poisson_mixture_bound.Rd  normal_log_mixture.Rd  normal_mixture_bound.Rd  poly_stitching_bound.Rd  quantile_ab_p_value.Rd
r_package/src/: RcppExports.cpp  confseq_interface.cpp  uniform_boundaries.h
src/confseq/: README.md  betting.py  betting_strategies.py  boundaries.cpp  conjmix_bounded.py  cs_plots.py  misc.py  other_bounded.py  predmix.py  python_interface.cpp  quantiles.cpp  types.py  uniform_boundaries.h  utils.py
test/: .gitignore  Makefile  uniform_boundaries_unittest.cpp
test/python_tests/: test_betting.py  test_conjmix_bounded.py  test_predmix.py
test/visual_tests/: cs_wor.py  cs_wr.py  visual_tests.py
